Freedom Sanbox Ant Deploy/src/objects/GoalInsuranceAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Order__c</fullName>
        <label>Allocation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoalYearValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GoalYearValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>GoalInvestAssetAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <referenceTo>Insurance__c</referenceTo>
        <relationshipLabel>Goal</relationshipLabel>
        <relationshipName>GoalInvestAssetAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>allocated__c</fullName>
        <label>allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>GoalInsuranceAssociation</label>
    <nameField>
        <displayFormat>GI-{0000}</displayFormat>
        <label>GoalInsuranceAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoalInsuranceAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>